Added the Node class #2

--- a/8-Puzzle-Solver.ipynb
+++ b/8-Puzzle-Solver.ipynb
@@ -10,7 +10,8 @@
    },
    "source": [
     "# 8 Puzzle solver\n",
-    "In this repository we're going to solve this puzzle using $ A^* $ and $ IDA $"
+    "* Parsa KamaliPour - 97149081\n",
+    "* In this repository we're going to solve this puzzle using $ A^* $ and $ IDA $"
    ]
   },
   {
@@ -27,10 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "import pandas as pandas\n",
+    "import pandas as pd\n",
     "import numpy as np"
    ],
    "metadata": {
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -82,7 +83,7 @@
     "]\n",
     "\n",
     "print('Input: ')\n",
-    "print(pandas.DataFrame(input_puzzle))\n",
+    "print(pd.DataFrame(input_puzzle))\n",
     "print()\n",
     "\n",
     "desired_output = [\n",
@@ -92,7 +93,7 @@
     "]\n",
     "\n",
     "print('Desired Output:')\n",
-    "print(pandas.DataFrame(desired_output))"
+    "print(pd.DataFrame(desired_output))"
    ],
    "metadata": {
     "collapsed": false,
@@ -115,13 +116,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "class Node:\n",
     "\n",
-    "    def __init__(self, parent, g, ):\n"
+    "    def __init__(self, parent, g_cost, row, col, val, h_cost, omega):\n",
+    "\n",
+    "        self.parent = parent\n",
+    "        self.g_cost = g_cost\n",
+    "        self.row = row\n",
+    "        self.col = col\n",
+    "        self.val = val\n",
+    "        self.h_cost = h_cost\n",
+    "        self.f_function = (2 - omega) * self.g_cost + omega * self.h_cost"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
