added code's configs, Heuristic class, updated node class #2 #3

--- a/8-Puzzle-Solver.ipynb
+++ b/8-Puzzle-Solver.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -105,6 +105,35 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### code's configs:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "heuristic_method = input(\"Enter the desired Heuristic method: h1 or h2\")\n",
+    "f_function_omega = input(\"Enter the desired f function omega: 2 is Greedy, \"\n",
+    "                         \"0 is Uninformed best-first search, \"\n",
+    "                         \"0 < omega <= 1 is A*\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### The node class:"
    ],
    "metadata": {
@@ -116,20 +145,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "class Node:\n",
     "\n",
-    "    def __init__(self, parent, g_cost, row, col, val, h_cost, omega):\n",
+    "    def __init__(self, parent, g_cost, row, col, val):\n",
     "\n",
     "        self.parent = parent\n",
     "        self.g_cost = g_cost\n",
     "        self.row = row\n",
     "        self.col = col\n",
     "        self.val = val\n",
-    "        self.h_cost = h_cost\n",
-    "        self.f_function = (2 - omega) * self.g_cost + omega * self.h_cost"
+    "        self.h_cost = Heuristic(self, input_puzzle, desired_output, heuristic_method)\n",
+    "        self.f_function = (2 - f_function_omega) * self.g_cost + f_function_omega * self.h_cost"
    ],
    "metadata": {
     "collapsed": false,
@@ -139,10 +168,41 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### the heuristic calculator class:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "outputs": [],
-   "source": [],
+   "source": [
+    "class Heuristic:\n",
+    "\n",
+    "    def __init__(self, node, input_puzzle, desired_output, method):\n",
+    "        self.method = method\n",
+    "        self.node = node\n",
+    "        self.input_puzzle = input_puzzle\n",
+    "        self.desired_output = desired_output\n",
+    "\n",
+    "        if method == 'h1':\n",
+    "            self.h1_misplaced_tiles()\n",
+    "        elif method == 'h2':\n",
+    "            self.h2_manhattan_distance()\n",
+    "\n",
+    "    def h1_misplaced_tiles(self):\n",
+    "        pass\n",
+    "\n",
+    "    def h2_manhattan_distance(self):\n",
+    "        pass\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
