Added Mat2dict, h1_misplaced_tiles #3

--- a/8-Puzzle-Solver.ipynb
+++ b/8-Puzzle-Solver.ipynb
@@ -55,12 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<__main__.Mat2dict object at 0x0000028920E9E9D0>\n",
       "Input: \n",
       "   0  1  2\n",
       "0  1  2  3\n",
@@ -134,6 +135,89 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### Matrix to dictionary converter"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class Mat2dict:\n",
+    "\n",
+    "    def __init__(self, matrix):\n",
+    "        self.matrix = matrix\n",
+    "        self.dic = {}\n",
+    "        self.convert()\n",
+    "\n",
+    "\n",
+    "    def convert(self):\n",
+    "        for r in range(len(self.matrix)):\n",
+    "            for c in range(len(self.matrix[0])):\n",
+    "                self.dic[self.matrix[r][c]] = (r, c)\n",
+    "\n",
+    "        return self.dic\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### the heuristic calculator class:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class Heuristic:\n",
+    "\n",
+    "    def __init__(self, node, current_puzzle, desired_answer, method):\n",
+    "        self.method = method\n",
+    "        self.node = node\n",
+    "        self.current_puzzle = current_puzzle\n",
+    "        self.desired_answer = desired_answer\n",
+    "        self.current_puzzle_dict = Mat2dict(self.current_puzzle)\n",
+    "        self.desired_answer_dict = Mat2dict(self.desired_answer)\n",
+    "\n",
+    "        if method == 'h1':\n",
+    "            self.h1_misplaced_tiles()\n",
+    "        elif method == 'h2':\n",
+    "            self.h2_manhattan_distance()\n",
+    "\n",
+    "    def h1_misplaced_tiles(self):\n",
+    "        misplace_counter = 0\n",
+    "        for row in range(len(self.current_puzzle)):\n",
+    "            for col in range(len(self.current_puzzle[0])):\n",
+    "                correct_row, correct_col = self.desired_answer_dict[self.current_puzzle[row][col]]\n",
+    "                misplace_counter += abs(row - correct_row) + abs(col - correct_col)\n",
+    "        return misplace_counter\n",
+    "\n",
+    "    def h2_manhattan_distance(self):\n",
+    "        pass"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### The node class:"
    ],
    "metadata": {
@@ -150,58 +234,17 @@
    "source": [
     "class Node:\n",
     "\n",
-    "    def __init__(self, parent, g_cost, row, col, val):\n",
+    "    def __init__(self, parent, current_puzzle, g_cost, row, col, val):\n",
     "\n",
+    "        self.current_puzzle = current_puzzle\n",
     "        self.parent = parent\n",
     "        self.g_cost = g_cost\n",
     "        self.row = row\n",
     "        self.col = col\n",
     "        self.val = val\n",
-    "        self.h_cost = Heuristic(self, input_puzzle, desired_output, heuristic_method)\n",
-    "        self.f_function = (2 - f_function_omega) * self.g_cost + f_function_omega * self.h_cost"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### the heuristic calculator class:"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [],
-   "source": [
-    "class Heuristic:\n",
-    "\n",
-    "    def __init__(self, node, input_puzzle, desired_output, method):\n",
-    "        self.method = method\n",
-    "        self.node = node\n",
-    "        self.input_puzzle = input_puzzle\n",
-    "        self.desired_output = desired_output\n",
-    "\n",
-    "        if method == 'h1':\n",
-    "            self.h1_misplaced_tiles()\n",
-    "        elif method == 'h2':\n",
-    "            self.h2_manhattan_distance()\n",
-    "\n",
-    "    def h1_misplaced_tiles(self):\n",
-    "        pass\n",
-    "\n",
-    "    def h2_manhattan_distance(self):\n",
-    "        pass\n"
+    "        self.h_cost = Heuristic(self, current_puzzle, desired_output, heuristic_method)\n",
+    "        self.f_function = (2 - f_function_omega) * self.g_cost + f_function_omega * self.h_cost\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
