renamed h1 to h2, added misplaced h1 #3

--- a/8-Puzzle-Solver.ipynb
+++ b/8-Puzzle-Solver.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "class Heuristic:\n",
@@ -198,15 +198,20 @@
     "            self.h2_manhattan_distance()\n",
     "\n",
     "    def h1_misplaced_tiles(self):\n",
-    "        misplace_counter = 0\n",
+    "        misplaced_counter = 0\n",
+    "        for row in range(len(self.current_puzzle)):\n",
+    "            for col in range(len(self.current_puzzle[0])):\n",
+    "                if self.current_puzzle[row][col] != self.desired_answer[row][col]:\n",
+    "                    misplaced_counter += 1\n",
+    "        return misplaced_counter\n",
+    "\n",
+    "    def h2_manhattan_distance(self):\n",
+    "        total_distance_counter = 0\n",
     "        for row in range(len(self.current_puzzle)):\n",
     "            for col in range(len(self.current_puzzle[0])):\n",
     "                correct_row, correct_col = self.desired_answer_dict[self.current_puzzle[row][col]]\n",
-    "                misplace_counter += abs(row - correct_row) + abs(col - correct_col)\n",
-    "        return misplace_counter\n",
-    "\n",
-    "    def h2_manhattan_distance(self):\n",
-    "        pass"
+    "                total_distance_counter += abs(row - correct_row) + abs(col - correct_col)\n",
+    "        return total_distance_counter"
    ],
    "metadata": {
     "collapsed": false,
