--- a/8-Puzzle-Solver.ipynb
+++ b/8-Puzzle-Solver.ipynb
@@ -171,7 +171,19 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### the heuristic calculator class:"
+    "### the heuristic calculator class:\n",
+    "\n",
+    "* H1 heuristic (misplaced tiles)\n",
+    "\n",
+    "    $$ if \\; currentPuzzleBoard[node_i] \\; != \\; goalPuzzleBoard[node_i]$$\n",
+    "    $$ then \\; h(state) = h(state) + 1$$\n",
+    "\n",
+    "* H2 heuristic (manhattan distance)  \n",
+    "\n",
+    "    $$ goalPuzzleBoard.find(currentPuzzleBoard[node_i]) $$  \n",
+    "    $$ retrieve \\; Row \\; \\& \\; Col \\; of \\; goal $$  \n",
+    "    $$ manhattanDistance = |(goal.row - current.row)| + |(goal.col - current.col)| $$  \n",
+    "    $$ TotalHeuristic[state_i] = \\Sigma_{i=1}^{9} manhattanDistance_i $$  "
    ],
    "metadata": {
     "collapsed": false
