fixed Latex description for H1 & H2

--- a/8-Puzzle-Solver.ipynb
+++ b/8-Puzzle-Solver.ipynb
@@ -175,15 +175,15 @@
     "\n",
     "* H1 heuristic (misplaced tiles)\n",
     "\n",
-    "    $$ if \\; currentPuzzleBoard[node_i] \\; != \\; goalPuzzleBoard[node_i]$$\n",
-    "    $$ then \\; h(state) = h(state) + 1$$\n",
+    "    $ \\Sigma_{i=1}^{9} \\; if \\; currentPuzzleBoard[node_i] \\; != \\; goalPuzzleBoard[node_i]$\n",
+    "    $ then \\; h(state_y) = h(state_y) + 1$\n",
     "\n",
-    "* H2 heuristic (manhattan distance)  \n",
+    "* H2 heuristic (manhattan distance)\n",
     "\n",
-    "    $$ goalPuzzleBoard.find(currentPuzzleBoard[node_i]) $$  \n",
-    "    $$ retrieve \\; Row \\; \\& \\; Col \\; of \\; goal $$  \n",
-    "    $$ manhattanDistance = |(goal.row - current.row)| + |(goal.col - current.col)| $$  \n",
-    "    $$ TotalHeuristic[state_i] = \\Sigma_{i=1}^{9} manhattanDistance_i $$  "
+    "    $ goalPuzzleBoard.find(currentPuzzleBoard[node_i]) $\n",
+    "    $ retrieve \\; Row \\; \\& \\; Col \\; of \\; goal $\n",
+    "    $ manhattanDistance = |(goal.row - current.row)| + |(goal.col - current.col)| $\n",
+    "    $ TotalHeuristic[state_i] = \\Sigma_{i=1}^{9} manhattanDistance_i $"
    ],
    "metadata": {
     "collapsed": false
