--- a/8-Puzzle-Solver.ipynb
+++ b/8-Puzzle-Solver.ipynb
@@ -182,11 +182,11 @@
     "* H2 heuristic (manhattan distance)\n",
     "\n",
     "    $ goalPuzzleBoard.find(currentPuzzleBoard[node_i]) $\n",
-    "    \n",
+    "\n",
     "    $ retrieve \\; Row \\; \\& \\; Col \\; of \\; goal $\n",
-    "  \n",
+    "\n",
     "    $ manhattanDistance = |(goal.row - current.row)| + |(goal.col - current.col)| $\n",
-    "    \n",
+    "\n",
     "    $ TotalHeuristic[state_i] = \\Sigma_{i=1}^{9} manhattanDistance_i $"
    ],
    "metadata": {
@@ -239,7 +239,30 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### The node class:"
+    "### The node class:\n",
+    "\n",
+    "* F function is calculated in a such way that you can control how the Heuristic and G-cost\n",
+    "can perform:\n",
+    "\n",
+    "    $ FCost(n) = (2-\\omega) * GCost(n) + \\omega * h(n)$\n",
+    "  \n",
+    "    $ if \\; \\omega = 2: $\n",
+    "  \n",
+    "    $ then: algorithm \\; is \\; Greedy \\; due \\; to \\; GCost \\; being \\; 0:$\n",
+    "  \n",
+    "    $ FCost(n) = 0 + 2 * h(n) $\n",
+    "  \n",
+    "    $ if \\; \\omega = 0: $\n",
+    "  \n",
+    "    $ then: algorithm \\; is \\; uninformed \\; search \\; due \\; to \\; h(n) \\; being \\; 0:$\n",
+    "  \n",
+    "    $ FCost(n) = 2 * GCost(n) + 0 $\n",
+    "  \n",
+    "    $ if \\; 0 \\lt \\omega \\le 1 : $\n",
+    "  \n",
+    "    $ then: algorithm \\; is \\; informed \\; search(A^*):$\n",
+    "  \n",
+    "    $ FCost(n) = (2-\\omega) * GCost(n) + \\omega * h(n) $"
    ],
    "metadata": {
     "collapsed": false,
