changed Node class structure a little bit #2

--- a/8-Puzzle-Solver.ipynb
+++ b/8-Puzzle-Solver.ipynb
@@ -55,13 +55,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Mat2dict object at 0x0000028920E9E9D0>\n",
       "Input: \n",
       "   0  1  2\n",
       "0  1  2  3\n",
@@ -117,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "heuristic_method = input(\"Enter the desired Heuristic method: h1 or h2\")\n",
@@ -143,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "class Mat2dict:\n",
@@ -176,7 +175,7 @@
     "* H1 heuristic (misplaced tiles)\n",
     "\n",
     "    $ \\Sigma_{i=1}^{9} \\; if \\; currentPuzzleBoard[node_i] \\; != \\; goalPuzzleBoard[node_i]$\n",
-    "  \n",
+    "\n",
     "    $ then \\; h(state_y) = h(state_y) + 1$\n",
     "\n",
     "* H2 heuristic (manhattan distance)\n",
@@ -195,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "class Heuristic:\n",
@@ -205,7 +204,7 @@
     "        self.node = node\n",
     "        self.current_puzzle = current_puzzle\n",
     "        self.desired_answer = desired_answer\n",
-    "        self.current_puzzle_dict = Mat2dict(self.current_puzzle)\n",
+    "        #self.current_puzzle_dict = Mat2dict(self.current_puzzle)\n",
     "        self.desired_answer_dict = Mat2dict(self.desired_answer)\n",
     "\n",
     "        if method == 'h1':\n",
@@ -245,23 +244,23 @@
     "can perform:\n",
     "\n",
     "    $ FCost(n) = (2-\\omega) * GCost(n) + \\omega * h(n)$\n",
-    "  \n",
+    "\n",
     "    $ if \\; \\omega = 2: $\n",
-    "  \n",
+    "\n",
     "    $ then: algorithm \\; is \\; Greedy \\; due \\; to \\; GCost \\; being \\; 0:$\n",
-    "  \n",
+    "\n",
     "    $ FCost(n) = 0 + 2 * h(n) $\n",
-    "  \n",
+    "\n",
     "    $ if \\; \\omega = 0: $\n",
-    "  \n",
+    "\n",
     "    $ then: algorithm \\; is \\; uninformed \\; search \\; due \\; to \\; h(n) \\; being \\; 0:$\n",
-    "  \n",
+    "\n",
     "    $ FCost(n) = 2 * GCost(n) + 0 $\n",
-    "  \n",
+    "\n",
     "    $ if \\; 0 \\lt \\omega \\le 1 : $\n",
-    "  \n",
+    "\n",
     "    $ then: algorithm \\; is \\; informed \\; search(A^*):$\n",
-    "  \n",
+    "\n",
     "    $ FCost(n) = (2-\\omega) * GCost(n) + \\omega * h(n) $"
    ],
    "metadata": {
@@ -273,21 +272,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "class Node:\n",
     "\n",
-    "    def __init__(self, parent, current_puzzle, g_cost, row, col, val):\n",
-    "\n",
+    "    def __init__(self, current_puzzle, row, col, val, parent=None):\n",
     "        self.current_puzzle = current_puzzle\n",
     "        self.parent = parent\n",
-    "        self.g_cost = g_cost\n",
     "        self.row = row\n",
     "        self.col = col\n",
     "        self.val = val\n",
+    "\n",
+    "        if self.parent:\n",
+    "            self.g_cost = self.parent.f_function\n",
+    "            self.depth = self.parent.depth + 1\n",
+    "\n",
+    "        else:\n",
+    "            self.g_cost = 0\n",
+    "            self.depth = 0\n",
+    "\n",
     "        self.h_cost = Heuristic(self, current_puzzle, desired_output, heuristic_method)\n",
     "        self.f_function = (2 - f_function_omega) * self.g_cost + f_function_omega * self.h_cost\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        return self.f_function == other.f_function\n",
+    "\n",
+    "    def get_path(self):\n",
+    "        node, path = self, []\n",
+    "        while node:\n",
+    "            path.append(node)\n",
+    "            node = node.parent\n",
+    "        return list(reversed(path))\n",
+    "\n",
+    "    def get_position(self, element):\n",
+    "        for row in range(len(self.current_puzzle)):\n",
+    "            for col in range(len(self.current_puzzle[0])):\n",
+    "                if self.current_puzzle[row][col] == element:\n",
+    "                    return [row, col]\n",
+    "        return [None,None]\n",
+    "    \n",
+    "    "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### The puzzle solver class:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class Puzzle_solver:\n",
+    "\n",
+    "    def __init__(self, start_node):\n",
+    "\n",
+    "        self.start_node = start_node\n",
+    "        self.depth = 0\n",
+    "        self.visited_nodes = set()\n",
+    "        self.expanded_nodes = 0\n",
+    "\n",
+    "    def solve(self):\n",
     "\n"
    ],
    "metadata": {
