updated Node, wrote PuzzleSolver #2 #4

--- a/8-Puzzle-Solver.ipynb
+++ b/8-Puzzle-Solver.ipynb
@@ -28,11 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import collections\n",
+    "import heapq"
    ],
    "metadata": {
     "collapsed": false,
@@ -272,17 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "class Node:\n",
     "\n",
-    "    def __init__(self, current_puzzle, row, col, val, parent=None):\n",
+    "    def __init__(self, current_puzzle, parent=None):\n",
     "        self.current_puzzle = current_puzzle\n",
     "        self.parent = parent\n",
-    "        self.row = row\n",
-    "        self.col = col\n",
-    "        self.val = val\n",
     "\n",
     "        if self.parent:\n",
     "            self.g_cost = self.parent.f_function\n",
@@ -298,6 +297,9 @@
     "    def __eq__(self, other):\n",
     "        return self.f_function == other.f_function\n",
     "\n",
+    "    def get_id(self):\n",
+    "        return str(self)\n",
+    "\n",
     "    def get_path(self):\n",
     "        node, path = self, []\n",
     "        while node:\n",
@@ -311,8 +313,7 @@
     "                if self.current_puzzle[row][col] == element:\n",
     "                    return [row, col]\n",
     "        return [None,None]\n",
-    "    \n",
-    "    "
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -335,20 +336,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "outputs": [],
    "source": [
-    "class Puzzle_solver:\n",
+    "\n",
+    "class PuzzleSolver:\n",
     "\n",
     "    def __init__(self, start_node):\n",
     "\n",
+    "        self.final_state = None\n",
     "        self.start_node = start_node\n",
     "        self.depth = 0\n",
     "        self.visited_nodes = set()\n",
     "        self.expanded_nodes = 0\n",
     "\n",
     "    def solve(self):\n",
+    "\n",
+    "        queue = [self.start_node]\n",
+    "        self.visited_nodes.add(self.start_node.get_id)\n",
+    "\n",
+    "        while queue:\n",
+    "            self.expanded_nodes += 1\n",
+    "            node = heapq.heappop(queue)\n",
+    "            if node.current_puzzle == desired_output:\n",
+    "                self.final_state = node\n",
+    "                Result(self.final_state)\n",
+    "                return True\n",
+    "\n",
+    "            if node.depth + 1 > self.depth:\n",
+    "                self.depth = node.depth + 1\n",
+    "\n",
+    "            for neighbor in NeighborsCalculator(node).get_list_of_neighbors():\n",
+    "                if not neighbor.get_id in self.visited_nodes:\n",
+    "                    self.visited_nodes.add(neighbor.get_id)\n",
+    "                    heapq.heappush(queue, neighbor)\n",
+    "        return False\n",
     "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### result class"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "class Result:\n",
+    "\n",
+    "    def __init__(self, final_state):\n",
+    "        pass\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Neighbors calculator"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class NeighborsCalculator:\n",
+    "\n",
+    "    def __init__(self, current_state):\n",
+    "        pass\n",
+    "\n",
+    "    def get_list_of_neighbors(self):\n",
+    "        pass"
    ],
    "metadata": {
     "collapsed": false,
