Added NeighborsCalculator Class #5

--- a/8-Puzzle-Solver.ipynb
+++ b/8-Puzzle-Solver.ipynb
@@ -28,9 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "outputs": [],
    "source": [
+    "import copy\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import collections\n",
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -118,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "heuristic_method = input(\"Enter the desired Heuristic method: h1 or h2\")\n",
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "class Mat2dict:\n",
@@ -196,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "class Heuristic:\n",
@@ -274,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "class Node:\n",
@@ -336,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "\n",
@@ -394,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "class Result:\n",
@@ -423,16 +425,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "class NeighborsCalculator:\n",
     "\n",
     "    def __init__(self, current_state):\n",
-    "        pass\n",
+    "        self.current_state = current_state\n",
+    "        self.puzzle = self.current_state.current_puzzle\n",
+    "        self.neighbors = []\n",
     "\n",
     "    def get_list_of_neighbors(self):\n",
-    "        pass"
+    "        row, col = map(int, self.current_state.get_position(0))\n",
+    "        if row or col is None:\n",
+    "            return []\n",
+    "\n",
+    "        # move right\n",
+    "        if col < len(self.puzzle[0]) - 1:\n",
+    "            moved_right = copy.deepcopy(self.puzzle)\n",
+    "            moved_right[row][col], moved_right[row][col + 1] = moved_right[row][col + 1], moved_right[row][col]\n",
+    "            self.neighbors.append(Node(moved_right, self.current_state))\n",
+    "\n",
+    "        # move left\n",
+    "        if col > 0:\n",
+    "            moved_left = copy.deepcopy(self.puzzle)\n",
+    "            moved_left[row][col], moved_left[row][col - 1] = moved_left[row][col - 1], moved_left[row][col]\n",
+    "            self.neighbors.append(Node(moved_left, self.current_state))\n",
+    "\n",
+    "        # move up\n",
+    "        if row > 0:\n",
+    "            moved_up = copy.deepcopy(self.puzzle)\n",
+    "            moved_up[row][col], moved_up[row - 1][col] = moved_up[row - 1][col], moved_up[row][col]\n",
+    "            self.neighbors.append(Node(moved_up, self.current_state))\n",
+    "\n",
+    "\n",
+    "        # move down\n",
+    "        if row < len(self.puzzle) - 1:\n",
+    "            moved_down = copy.deepcopy(self.puzzle)\n",
+    "            moved_down[row][col], moved_down[row + 1][col] = moved_down[row + 1][col], moved_down[row][col]\n",
+    "            self.neighbors.append(Node(moved_down, self.current_state))\n",
+    "\n",
+    "        return self.neighbors"
    ],
    "metadata": {
     "collapsed": false,
