Added result Class #5

--- a/8-Puzzle-Solver.ipynb
+++ b/8-Puzzle-Solver.ipynb
@@ -396,13 +396,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "class Result:\n",
     "\n",
     "    def __init__(self, final_state):\n",
-    "        pass\n"
+    "        self.final_state = final_state\n",
+    "        self.solved_puzzle = self.final_state.current_puzzle\n",
+    "        self.path = self.final_state.get_path()\n",
+    "        self.show_puzzles()\n",
+    "        self.show_path()\n",
+    "\n",
+    "    def show_puzzles(self):\n",
+    "        print(\"Inital Puzzle: \")\n",
+    "        print(pd.DataFrame(input_puzzle))\n",
+    "        print(\"Result Puzzle: \")\n",
+    "        print(pd.DataFrame(self.solved_puzzle))\n",
+    "        print(\"Expected Puzzle: \")\n",
+    "        print(pd.DataFrame(desired_output))\n",
+    "\n",
+    "    def show_path(self):\n",
+    "        counter = 0\n",
+    "        while self.path:\n",
+    "            counter += 1\n",
+    "            step = self.path.pop(0)\n",
+    "            print(\"step {}: \".format(counter))\n",
+    "            print(step.current_puzzle)\n"
    ],
    "metadata": {
     "collapsed": false,
