--- a/8-Puzzle-Solver.ipynb
+++ b/8-Puzzle-Solver.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 232,
    "outputs": [],
    "source": [
     "import copy\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 233,
    "outputs": [
     {
      "name": "stdout",
@@ -120,13 +120,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 234,
    "outputs": [],
    "source": [
     "heuristic_method = input(\"Enter the desired Heuristic method: h1 or h2\")\n",
-    "f_function_omega = input(\"Enter the desired f function omega: 2 is Greedy, \"\n",
+    "f_function_omega = eval(input(\"Enter the desired f function omega: 2 is Greedy, \"\n",
     "                         \"0 is Uninformed best-first search, \"\n",
-    "                         \"0 < omega <= 1 is A*\")\n"
+    "                         \"0 < omega <= 1 is A*\"))\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 235,
    "outputs": [],
    "source": [
     "class Mat2dict:\n",
@@ -154,13 +154,13 @@
     "    def __init__(self, matrix):\n",
     "        self.matrix = matrix\n",
     "        self.dic = {}\n",
-    "        self.convert()\n",
     "\n",
     "\n",
     "    def convert(self):\n",
     "        for r in range(len(self.matrix)):\n",
     "            for c in range(len(self.matrix[0])):\n",
-    "                self.dic[self.matrix[r][c]] = (r, c)\n",
+    "                key = self.matrix[r][c]\n",
+    "                self.dic[key] = [r, c]\n",
     "\n",
     "        return self.dic\n"
    ],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 236,
    "outputs": [],
    "source": [
     "class Heuristic:\n",
@@ -209,12 +209,13 @@
     "        self.current_puzzle = current_puzzle\n",
     "        self.desired_answer = desired_answer\n",
     "        #self.current_puzzle_dict = Mat2dict(self.current_puzzle)\n",
-    "        self.desired_answer_dict = Mat2dict(self.desired_answer)\n",
+    "        self.desired_answer_dict = Mat2dict(self.desired_answer).convert()\n",
     "\n",
-    "        if method == 'h1':\n",
-    "            self.h1_misplaced_tiles()\n",
-    "        elif method == 'h2':\n",
-    "            self.h2_manhattan_distance()\n",
+    "    def do(self):\n",
+    "        if self.method == 'h1':\n",
+    "            return self.h1_misplaced_tiles()\n",
+    "        elif self.method == 'h2':\n",
+    "            return self.h2_manhattan_distance()\n",
     "\n",
     "    def h1_misplaced_tiles(self):\n",
     "        misplaced_counter = 0\n",
@@ -228,7 +229,8 @@
     "        total_distance_counter = 0\n",
     "        for row in range(len(self.current_puzzle)):\n",
     "            for col in range(len(self.current_puzzle[0])):\n",
-    "                correct_row, correct_col = self.desired_answer_dict[self.current_puzzle[row][col]]\n",
+    "                key = self.current_puzzle[row][col]\n",
+    "                correct_row, correct_col = self.desired_answer_dict[key]\n",
     "                total_distance_counter += abs(row - correct_row) + abs(col - correct_col)\n",
     "        return total_distance_counter"
    ],
@@ -276,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 237,
    "outputs": [],
    "source": [
     "class Node:\n",
@@ -293,11 +295,14 @@
     "            self.g_cost = 0\n",
     "            self.depth = 0\n",
     "\n",
-    "        self.h_cost = Heuristic(self, current_puzzle, desired_output, heuristic_method)\n",
+    "        self.h_cost = Heuristic(self, current_puzzle, desired_output, heuristic_method).do()\n",
     "        self.f_function = (2 - f_function_omega) * self.g_cost + f_function_omega * self.h_cost\n",
     "\n",
     "    def __eq__(self, other):\n",
     "        return self.f_function == other.f_function\n",
+    "\n",
+    "    def __lt__(self, other):\n",
+    "        return self.f_function < other.f_function\n",
     "\n",
     "    def get_id(self):\n",
     "        return str(self)\n",
@@ -314,7 +319,7 @@
     "            for col in range(len(self.current_puzzle[0])):\n",
     "                if self.current_puzzle[row][col] == element:\n",
     "                    return [row, col]\n",
-    "        return [None,None]\n",
+    "        return [0, 0]\n",
     "\n"
    ],
    "metadata": {
@@ -338,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 238,
    "outputs": [],
    "source": [
     "\n",
@@ -355,7 +360,7 @@
     "    def solve(self):\n",
     "\n",
     "        queue = [self.start_node]\n",
-    "        self.visited_nodes.add(self.start_node.get_id)\n",
+    "        self.visited_nodes.add(self.start_node.get_id())\n",
     "\n",
     "        while queue:\n",
     "            self.expanded_nodes += 1\n",
@@ -370,8 +375,9 @@
     "\n",
     "            for neighbor in NeighborsCalculator(node).get_list_of_neighbors():\n",
     "                if not neighbor.get_id in self.visited_nodes:\n",
-    "                    self.visited_nodes.add(neighbor.get_id)\n",
+    "                    self.visited_nodes.add(neighbor.get_id())\n",
     "                    heapq.heappush(queue, neighbor)\n",
+    "\n",
     "        return False\n",
     "\n"
    ],
@@ -396,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 239,
    "outputs": [],
    "source": [
     "class Result:\n",
@@ -422,7 +428,7 @@
     "            counter += 1\n",
     "            step = self.path.pop(0)\n",
     "            print(\"step {}: \".format(counter))\n",
-    "            print(step.current_puzzle)\n"
+    "            print(pd.DataFrame(step.current_puzzle))\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -445,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 240,
    "outputs": [],
    "source": [
     "class NeighborsCalculator:\n",
@@ -457,8 +463,8 @@
     "\n",
     "    def get_list_of_neighbors(self):\n",
     "        row, col = map(int, self.current_state.get_position(0))\n",
-    "        if row or col is None:\n",
-    "            return []\n",
+    "        #if row or col is None:\n",
+    "          #  return []\n",
     "\n",
     "        # move right\n",
     "        if col < len(self.puzzle[0]) - 1:\n",
@@ -486,6 +492,62 @@
     "            self.neighbors.append(Node(moved_down, self.current_state))\n",
     "\n",
     "        return self.neighbors"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inital Puzzle: \n",
+      "   0  1  2\n",
+      "0  1  2  3\n",
+      "1  4  0  5\n",
+      "2  7  8  6\n",
+      "Result Puzzle: \n",
+      "   0  1  2\n",
+      "0  1  2  3\n",
+      "1  4  5  0\n",
+      "2  7  8  6\n",
+      "Expected Puzzle: \n",
+      "   0  1  2\n",
+      "0  1  2  3\n",
+      "1  4  5  0\n",
+      "2  7  8  6\n",
+      "step 1: \n",
+      "   0  1  2\n",
+      "0  1  2  3\n",
+      "1  4  0  5\n",
+      "2  7  8  6\n",
+      "step 2: \n",
+      "   0  1  2\n",
+      "0  1  2  3\n",
+      "1  4  5  0\n",
+      "2  7  8  6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 241,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "initial_state = Node(input_puzzle)\n",
+    "\n",
+    "PuzzleSolver(initial_state).solve()"
    ],
    "metadata": {
     "collapsed": false,
