--- a/8-Puzzle-Solver.ipynb
+++ b/8-Puzzle-Solver.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 273,
    "outputs": [],
    "source": [
     "import copy\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 274,
    "outputs": [
     {
      "name": "stdout",
@@ -80,24 +80,82 @@
     }
    ],
    "source": [
-    "input_puzzle = [\n",
+    "input_puzzle_1 = [\n",
     "    [1, 2, 3],\n",
     "    [4, 0, 5],\n",
     "    [7, 8, 6]\n",
     "]\n",
     "\n",
     "print('Input: ')\n",
-    "print(pd.DataFrame(input_puzzle))\n",
+    "print(pd.DataFrame(input_puzzle_1))\n",
     "print()\n",
     "\n",
-    "desired_output = [\n",
+    "desired_output_1 = [\n",
     "    [1, 2, 3],\n",
     "    [4, 5, 0],\n",
     "    [7, 8, 6]\n",
     "]\n",
     "\n",
     "print('Desired Output:')\n",
-    "print(pd.DataFrame(desired_output))"
+    "print(pd.DataFrame(desired_output_1))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Test case 2: (Hardest)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input 2: \n",
+      "   0  1  2\n",
+      "0  8  6  7\n",
+      "1  2  5  4\n",
+      "2  3  0  1\n",
+      "\n",
+      "Desired Output 2:\n",
+      "   0  1  2\n",
+      "0  6  4  7\n",
+      "1  8  5  0\n",
+      "2  3  2  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_puzzle_2 = [\n",
+    "    [8, 6, 7],\n",
+    "    [2, 5, 4],\n",
+    "    [3, 0, 1]\n",
+    "]\n",
+    "\n",
+    "print('Input 2: ')\n",
+    "print(pd.DataFrame(input_puzzle_2))\n",
+    "print()\n",
+    "\n",
+    "desired_output_2 = [\n",
+    "    [6, 4, 7],\n",
+    "    [8, 5, 0],\n",
+    "    [3, 2, 1]\n",
+    "]\n",
+    "\n",
+    "print('Desired Output 2:')\n",
+    "print(pd.DataFrame(desired_output_2))\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -120,13 +178,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 276,
    "outputs": [],
    "source": [
     "heuristic_method = input(\"Enter the desired Heuristic method: h1 or h2\")\n",
     "f_function_omega = eval(input(\"Enter the desired f function omega: 2 is Greedy, \"\n",
     "                         \"0 is Uninformed best-first search, \"\n",
-    "                         \"0 < omega <= 1 is A*\"))\n"
+    "                         \"0 < omega <= 1 is A*\"))\n",
+    "\n",
+    "test_case = eval(input(\"which test case? 1:easy, 2:hard\"))\n",
+    "\n",
+    "if test_case == 1:\n",
+    "    input_puzzle = input_puzzle_1\n",
+    "    desired_output = desired_output_1\n",
+    "elif test_case == 2:\n",
+    "    input_puzzle = input_puzzle_2\n",
+    "    desired_output = desired_output_2"
    ],
    "metadata": {
     "collapsed": false,
@@ -146,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 277,
    "outputs": [],
    "source": [
     "class Mat2dict:\n",
@@ -198,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 278,
    "outputs": [],
    "source": [
     "class Heuristic:\n",
@@ -278,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 279,
    "outputs": [],
    "source": [
     "class Node:\n",
@@ -343,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 280,
    "outputs": [],
    "source": [
     "\n",
@@ -367,7 +434,7 @@
     "            node = heapq.heappop(queue)\n",
     "            if node.current_puzzle == desired_output:\n",
     "                self.final_state = node\n",
-    "                Result(self.final_state)\n",
+    "                Result(self.final_state, self.expanded_nodes)\n",
     "                return True\n",
     "\n",
     "            if node.depth + 1 > self.depth:\n",
@@ -402,12 +469,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 281,
    "outputs": [],
    "source": [
     "class Result:\n",
     "\n",
-    "    def __init__(self, final_state):\n",
+    "    def __init__(self, final_state, expanded_nodes):\n",
+    "        self.expanded_nodes = expanded_nodes\n",
     "        self.final_state = final_state\n",
     "        self.solved_puzzle = self.final_state.current_puzzle\n",
     "        self.path = self.final_state.get_path()\n",
@@ -421,6 +489,9 @@
     "        print(pd.DataFrame(self.solved_puzzle))\n",
     "        print(\"Expected Puzzle: \")\n",
     "        print(pd.DataFrame(desired_output))\n",
+    "        print()\n",
+    "        print(\"Number of expanded nodes: {}\".format(self.expanded_nodes))\n",
+    "        print()\n",
     "\n",
     "    def show_path(self):\n",
     "        counter = 0\n",
@@ -451,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 282,
    "outputs": [],
    "source": [
     "class NeighborsCalculator:\n",
@@ -502,48 +573,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inital Puzzle: \n",
-      "   0  1  2\n",
-      "0  1  2  3\n",
-      "1  4  0  5\n",
-      "2  7  8  6\n",
-      "Result Puzzle: \n",
-      "   0  1  2\n",
-      "0  1  2  3\n",
-      "1  4  5  0\n",
-      "2  7  8  6\n",
-      "Expected Puzzle: \n",
-      "   0  1  2\n",
-      "0  1  2  3\n",
-      "1  4  5  0\n",
-      "2  7  8  6\n",
-      "step 1: \n",
-      "   0  1  2\n",
-      "0  1  2  3\n",
-      "1  4  0  5\n",
-      "2  7  8  6\n",
-      "step 2: \n",
-      "   0  1  2\n",
-      "0  1  2  3\n",
-      "1  4  5  0\n",
-      "2  7  8  6\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "True"
-     },
-     "execution_count": 241,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "initial_state = Node(input_puzzle)\n",
     "\n",
@@ -552,7 +583,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
